--- a/mercado_de_trab/mercado_de_trabalho.qmd
+++ b/mercado_de_trab/mercado_de_trabalho.qmd
@@ -19,6 +19,7 @@ execute:
 
 
 
+
 ```{r pacotes}
 
 #| include: false
@@ -95,8 +96,6 @@ colors <- c(
 ```
 
 
-
-
 ```{r IBGE}
 #| include: false
 #| 
@@ -150,6 +149,14 @@ desocupado =  '/t/6381/n1/all/v/4099/p/all/d/v4099%201' %>%
   dplyr::select(date, "pd" = "Valor") %>% 
   as_tibble()
 
+
+
+desocupado_pe = '/t/4099/n3/26/v/4099/p/all/d/v4099%201' %>% 
+  get_sidra(api=.) %>% 
+  dplyr::mutate(date = as.yearqtr(`Trimestre (Código)`, format = '%Y%q')) %>% 
+  dplyr::select(date, "pd" = "Valor") %>% 
+  as_tibble()
+
 ## Dados Referentes a Categorias 
 
 ocupacao_categoria = '/t/6320/n1/all/v/4090/p/all/c11913/allxt' %>% 
@@ -165,6 +172,12 @@ ocupacao_categoria_long = ocupacao_categoria %>%
   gather(variavel, valor, -date)
 
 
+ocupacao_pe = '/t/4097/n3/26/v/4090/p/all/c11913/all' %>% 
+  get_sidra(api=.) %>% 
+  mutate(date =  as.yearqtr(`Trimestre (Código)`, format = '%Y%m')) %>% 
+  dplyr::select(date, "Posição na ocupação e categoria do emprego no trabalho principal", Valor) %>% 
+  pivot_wider(names_from =  "Posição na ocupação e categoria do emprego no trabalho principal",
+              values_from = Valor)
 
 ## Pnad Massa 
 
@@ -241,6 +254,14 @@ condicao_pe = '/t/6463/n3/26/v/1641/p/all/c629/all' %>%
   `colnames<-`(names_pe) %>% 
   as_tibble()
   
+## Desocupado Pernambuco 
+
+
+desocupado_pe = '/t/4099/n3/26/v/4099/p/all/d/v4099%201' %>% 
+  get_sidra(api=.) %>% 
+  dplyr::mutate(date = as.yearqtr(`Trimestre (Código)`, format = '%Y%q')) %>% 
+  dplyr::select(date, "pd" = "Valor") %>% 
+  as_tibble()
 
 ## Juntar os dados de Pernambuco 
 
@@ -312,6 +333,8 @@ massa_pe = '/t/6421/n3/26/v/8745,8747/p/all/c12029/99383' %>%
   dplyr::rename(habitual = "Massa de rendimento mensal real das pessoas de 14 anos ou mais de idade ocupadas na semana de referência com rendimento de trabalho, habitualmente recebido no trabalho principal",
                 efetivo = "Massa de rendimento mensal real das pessoas de 14 anos ou mais de idade ocupadas na semana de referência com rendimento de trabalho, efetivamente recebido no trabalho principal")
 
+## Ocupação por Categoria 
+
 
 
 
@@ -319,7 +342,7 @@ massa_pe = '/t/6421/n3/26/v/8745,8747/p/all/c12029/99383' %>%
 ```
 
 
-```{r caged}
+```{r caged, eval=FALSE}
 
 ## Caged Brasil----------------------- 
 
@@ -368,19 +391,18 @@ caged_final = inner_join(dados_caged, caged_admissoes, by = "date")
 
 ## Caged Pernambuco e Nordeste ----------------------
 
-
-
+# Microdados do Caged -------------------------
 
 
 ```
 
 
-```{r seguro desem}
+```{r seguro desem, eval=FALSE}
 
 
-#url = 'http://pdet.mte.gov.br/images/Seguro-Desemprego/202312/3-%20S%C3%A9rie%20Hist%C3%B3rica%20do%20Seguro-Desemprego%20-%202000%20a%202023%20-%20Atualizado%20em%2011.01.2024.xlsx'
+url = 'http://pdet.mte.gov.br/images/Seguro-Desemprego/202312/3-%20S%C3%A9rie%20Hist%C3%B3rica%20do%20Seguro-Desemprego%20-%202000%20a%202023%20-%20Atualizado%20em%2011.01.2024.xlsx'
 
-#download.file(url, destfile = 'seguro.xlsx', mode='wb')
+download.file(url, destfile = 'seguro.xlsx', mode='wb')
 data = read_excel('seguro.xlsx', sheet="Tabela 1", skip=5) %>%
   drop_na()
 
@@ -413,18 +435,30 @@ seguro_long = seguro %>%
 
 ```
 
-
 ::: {.grid}
 
-::: {.g-col-7}
-## Introdução 
-- Aqui vem o Texto 
+::: {.g-col-5}
+## Desemprego no Brasil 
+
+
+- A taxa de desocupação apresentou nova redução em junho, atingindo 6,9\%, conforme esperado, permanecendo estável após o ajuste sazonal. A taxa de participação subiu para 62,2\%, com a população ocupada alcançando um recorde histórico de 101,8 milhões de pessoas. Já a população desocupada diminuiu para o menor nível registrado desde fevereiro de 2015.
+
+- Tanto os empregos formais quanto os informais vêm registrando crescimento, com destaque para o aumento mais expressivo entre os empregos formais, que apresentam uma taxa de crescimento anual de 2,7\%. A taxa de informalidade atingiu 38,6\%, representando uma leve queda em comparação ao primeiro trimestre deste ano.
+
+- A renda está em forte expansão, com a massa salarial atingindo um novo recorde. O rendimento médio habitual teve um aumento anual de 5,8\% acima da inflação, enquanto o rendimento efetivamente registrado no trimestre apresentou um crescimento real de 6,1\%, ultrapassando os níveis projetados pela tendência de crescimento pré-pandemia. A massa de rendimento habitual real alcançou R$ 322 bilhões, uma alta de 9,2\% no ano, o que deve sustentar o crescimento do consumo das famílias no segundo semestre.
+
+
 
 :::
 
-:::{.g-col-5}
 
-```{r fig.height=6, fig.width=6}
+
+:::{.g-col-5}
+::: panel-tabset
+
+### Taxa de Desocupação 
+
+```{r fig.height=5, fig.width=5}
 
 desocupado %>% 
   slice_tail(n=24) %>% 
@@ -444,6 +478,7 @@ desocupado %>%
 
 ```
 
+### Participação 
 
 ```{r}
 
@@ -461,14 +496,77 @@ filter(agregado_pnad_long,
        variavel %in% c('desemprego', 'participacao')) %>%
   filter(date > "2020-01-01") %>% 
   ggplot(aes(x = date, y = valor, colour = variavel)) +
-  geom_line(size = 0.8, color = "darkblue") +
-  #geom_text(data = last_desem, aes(label = valor), vjust = 2, hjust = 2, nudge_x = 1)+
+  geom_line(size = 0.8) +
+  scale_color_manual(values = c("desemprego" = "darkblue",  "participacao" = "gray")) +  # Adicionado parêntese de fechamento aqui
+  geom_text(data = last_desem, aes(label = valor), vjust = 2.5, hjust = 2, nudge_x = 1) +  # Adicionado parêntese de fechamento aqui
   facet_wrap(~variavel, scales = 'free') +
   theme_pander() +
   labs(x = '', y = '', title = '', caption = foot_ibge) +
-  theme(legend.position = 'none')
+  theme(legend.position = 'none')  # Removido parêntese extra no final
+
 ```
 
+
+### Categoria
+
+
+```{r}
+ocupacao_categoria_long =
+  ocupacao_categoria %>%
+  gather(variavel, valor, -date)
+
+filter(ocupacao_categoria_long,
+       variavel %in% c('Conta própria', 'Emprego com Carteira', 
+                       "Emprego sem Carteira",
+                       "Empregador")) %>%
+  filter(date > "2020-01-01") %>% 
+  ggplot(aes(x=date, y=valor, colour=variavel))+
+  geom_line(size=.8, color='darkblue')+
+  theme_pander()+
+  facet_wrap(~variavel, scales='free')+
+  theme(legend.position = 'none', 
+        strip.text = element_text(size=7, face='bold'))
+
+```
+
+:::
+
+```{r fig.height=6, fig.width=6}
+
+colours_5 <- c("darkblue","gray", "#d62728", "#ff7f0e")
+
+
+
+last_obs_comp_2 <- pnad_setor_long %>%
+  filter(variavel %in% c('comercio','servicos','construcao', 'industria')) %>%
+  group_by(variavel) %>%
+  filter(date == max(date)) %>%
+  ungroup()
+
+
+
+pnad_setor_long %>% 
+  filter(variavel %in% c('comercio','servicos','construcao', 'industria')) %>% 
+  filter(date > "2020-01-01") %>% 
+  ggplot()+ 
+  geom_line(aes(x =date, y= valor, colour = variavel), size = 0.8)+ 
+  scale_colour_manual(values = colours_5)+
+  scale_x_date(breaks = pretty_breaks(n = 8))+
+  theme_pander()+ 
+  theme(legend.position = 'top',
+        strip.text = element_text(size = 8, face = 'bold')) +
+  labs(x = '', y = 'Rendimento Médio',
+       title = 'Rendimento médio por setor',
+       caption = foot_ibge)+
+  geom_text(data = last_obs_comp_2,
+            aes(x = date, label = valor, y = ifelse(variavel == 'variavel', valor , valor ), color = variavel),
+            hjust = -0.1,
+            size = 2.5)
+
+
+
+
+```
 
 :::
 
@@ -477,139 +575,189 @@ filter(agregado_pnad_long,
 ::: {.grid}
 
 ::: {.g-col-7}
-## Seguro Desemprego 
+## Desemprego em Pernambuco 
 
-Aqui vem o texto 
+- Após contextualizarmos o cenário do desemprego no Brasil, é importante direcionarmos nosso foco para os resultados específicos de Pernambuco, conforme revelados pela Pesquisa Nacional por Amostra de Domicílios Contínua - Divulgação Trimestral do IBGE.
+
+- Observamos que o ponto mais alto da série ocorreu em maio de 2021, atingindo 21.8\%. Esse resultado foi fortemente influenciado pelo impacto da pandemia. No entanto, houve uma queda acentuada na taxa de desemprego, chegando próximo a 12\% até o final de 2022.
+
+-  Pernambuco, teve uma taxa de 11,5\% da sua força de trabalho desempregada no período de abril a junho de 2024. O valor é 2,6 pontos percentuais mais baixo do que o observado no mesmo período do ano passado, que foi de 14,2\%, e quase um ponto percentual (0,9\%) inferior ao apresentado no primeiro trimestre deste ano, de 12,4\%.
+
+- Além disso, a taxa de participação na força de trabalho, foi de 54\% apresentando uma pequena melhora ao trimestre anterior que foi de 53\%, o resultado é importante, pois observa-se uma relação positiva entre a participação e a desocupação.
+
+- Analisando agora o rendimento médio por setor, a série apresenta menos suavização em comparação com os resultados nacionais, devido à natureza da divulgação trimestral. No entanto, os resultados são mais voláteis. Em grande parte da série, o setor da industria registrou o melhor desempenho, seguidos de comércio, serviços e construção 
+
+- Além disso, o rendimento médio real atingiu seu pico no último trimestre de divulgação, atingindo o valor de R\$ 3113. A massa de rendimento efetivo também apresentou um leve aumento em relação ao habitual, embora esses valores variem consideravelmente ao longo dos anos, desde 2015.
+
+::: {.callout-note}
+
+### **Conceito**
+
+Pesquisa **Nacional por Amostra de Domicílios Contínua - Divulgação Trimestral** Visa acompanhar as flutuações trimestrais e a evolução, no curto, médio e longo prazos, da força de trabalho, e outras informações necessárias para o estudo do desenvolvimento socioeconômico do País. Para atender a tais objetivos, a pesquisa foi planejada para produzir indicadores trimestrais sobre a força de trabalho e indicadores anuais sobre temas suplementares permanentes
+
 :::
-:::{.g-col-5}
+
+::: {.callout-note}
+ 
+**Observe os resultados nos gráficos ao lado**
+
+:::
+
+
+:::
+
+::: {.g-col-5}
 ::: panel-tabset
 
-### Brasil
+### Taxa de Desocupação 
 
-```{r, fig.height=6, fig.width=6}
+```{r fig.height=5, fig.width=5, }
+desocupado_pe %>%
+  mutate(date = as.Date(date)) %>%  # Converter date para o formato Date
+  slice_tail(n = 24) %>%
+  ggplot(aes(x = date, y = pd)) +
+  geom_line(size = 0.8, colour = "gray") +
+  scale_x_date(breaks = date_breaks("4 month"), labels = date_format("%b/%Y")) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  geom_point(size = 10, shape = 21, colour = "black", fill = alpha("darkblue", 0.5)) +
+  geom_text(aes(label = pd), size = 3.5, hjust = 0.6, vjust = 0.6) +
+  theme_pander() +
+  xlab('') + ylab('Milhares de pessoas') +
+  labs(title = "População desocupada na PNAD Pernambuco", 
+       caption = foot_ibge) +
+  theme(legend.position = "none")
+```
 
-library(ggplot2)
+### Taxa de Participação
 
-seguro_bar <- seguro_long %>% 
-  dplyr::mutate(
-    months = lubridate::month(date, label = TRUE) %>% forcats::as_factor(),
-    years = lubridate::year(date) %>% forcats::as_factor()
-    ) %>% 
-  dplyr::filter(
-    regiao == "BRASIL",
-    months <= lubridate::month(max(date), label = TRUE)
-    )
+```{r}
 
-seguro_bar %>% 
-  ggplot2::ggplot(ggplot2::aes(x = years, y = value / 1e3, fill = months)) +
-  ggplot2::geom_bar(stat = "identity", position = ggplot2::position_stack(reverse = TRUE)) +
-  ggplot2::scale_x_discrete(breaks = levels(seguro_bar$years)) +
-  ggplot2::scale_y_continuous(expand = expansion(mult = c(0, 0.1))) +
-  ggplot2::scale_fill_manual(values = unname(colors)) +
-  ggplot2::geom_text(
-    ggplot2::aes(label = months), 
-    position = ggplot2::position_stack(vjust = .5, reverse = TRUE),
-    vjust    = 0.32,
-    size     = 4, 
-    fontface = "bold",
-    color    = "white"
-    ) +
-  ggplot2::coord_flip() +
-  ggplot2::theme(
-    legend.position  = "none",
-    plot.title       = ggplot2::element_text(size = 12, face = "bold"),
-    plot.subtitle    = ggplot2::element_text(size = 10, face = "italic"),
-    axis.text.x      = ggplot2::element_blank(),
-    axis.text.y      = ggplot2::element_text(face = "bold", size = 10), 
-    axis.ticks       = ggplot2::element_blank(),
-    panel.background = element_blank()
-    ) +
-  ggplot2::labs(
-    x        = NULL,
-    y        = NULL,
-    title    = "Pedidos de Seguro-Desemprego",
-    subtitle = "Em milhões de requisições acumuladas no ano até o mês de corte",
-    caption  = foot_ibge
-    ) + 
-  ggplot2::geom_text(
-    ggplot2::aes(label = round(stat(y) / 1e3, 2), group = years), 
-    stat     = "summary", 
-    fun      = sum, 
-    vjust    = .4,
-    hjust    = -.2,
-    size     = 4.2,
-    fontface = "bold"
-  )
+# Convertendo a série temporal para um dataframe
+agregado_df <- as.data.frame(agregado_st)
+
+# Adicionando a data como uma coluna separada
+agregado_df$date <- time(agregado_st)
+
+# Renomeando as colunas
+names(agregado_df) <- c("desemprego_pe", "participacao_pe", "date")
+
+# Transformando os dados em formato longo
+agregado_df_long <- gather(agregado_df, variable, valor, -date)
+
+# Plot facetado com tendência destacada e legenda
+ggplot(agregado_df_long, aes(x = date, y = valor, color = variable)) +
+  geom_line(size = 0.5) +
+  geom_smooth(method = "lm", se = FALSE, aes(group = variable), color = "black", linetype = "dashed") + # Adiciona tendência
+  facet_wrap(~ variable, scales = 'free') +
+  labs(x = "Data", y = "Valor",title = "Desocupação e Participação", color = "Variável") +
+  scale_color_manual(values = c("desemprego_pe" = "darkblue", "participacao_pe" = "gray"), 
+                     name = "Variável",
+                     labels = c("desemprego_pe" = "Desemprego", "participacao_pe" = "Participação")) +  # Mudando os rótulos da legenda de cores
+  theme_pander() +
+  theme(legend.position = "none")
+```
+
+### Relação Linear 
+
+```{r}
+
+filtered_data <- agregado_df_long %>%
+  filter(variable %in% c('desemprego_pe', 'participacao_pe')) %>% 
+  pivot_wider(names_from = variable,
+              values_from = valor)
+
+
+ggplot(filtered_data, aes(x = desemprego_pe, y = participacao_pe)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE) +
+  labs(x = "Desemprego", y = "Participação", title = "Relação entre Desemprego e Participação PE ") +
+  theme_pander()
+```
+
+:::
+
+::: {.g-col-5}
+::: panel-tabset
+### Rendimento por Setor
+
+```{r fig.height=7, fig.width=7}
+
+colours_4 <- c("darkblue","gray", "#d62728", "#ff7f0e")
+
+
+
+last_obs_comp <- rendimento_pe_long %>%
+  filter(variavel %in% c('comercio','servicos','construcao', 'industria')) %>%
+  group_by(variavel) %>%
+  filter(date == max(date)) %>%
+  ungroup()
+
+
+
+rendimento_pe_long %>% 
+  filter(variavel %in% c('comercio','servicos','construcao', 'industria')) %>% 
+  filter(date > "2021-01-01") %>% 
+  ggplot()+ 
+  geom_line(aes(x =date, y= valor, colour = variavel), size = 0.8)+ 
+  scale_colour_manual(values = colours_4)+
+  scale_x_date(breaks = pretty_breaks(n = 8))+
+  theme_pander()+ 
+  theme(legend.position = 'top',
+        strip.text = element_text(size = 10, face = 'bold')) +
+  labs(x = '', y = 'Rendimento Médio',
+       title = 'Rendimento médio por setor Pernambucano',
+       caption = foot_ibge)+
+  geom_text(data = last_obs_comp,
+            aes(x = date, label = valor, y = ifelse(variavel == 'variavel', valor , valor ), color = variavel),
+            hjust = -0.1,
+            size = 3.2)
 
 
 
 ```
 
-### Pernambuco 
+### Rendimento Médio
+
+```{r fig.height=7, fig.width=8}
+ultima_obs <- tail(pnad_rendimento_tri, 1)
+
+ggplot(pnad_rendimento_tri, 
+       aes(x=date, y=value))+
+  geom_line(size=.8, colour = "darkblue")+
+  theme_classic()+
+  labs(title = "Rendimento médio real Pernambucano", y = "Reais", x = NULL,
+       caption = foot_ibge)+
+   geom_text(data = ultima_obs, aes(label = value), hjust = -0, vjust = 0.5, color = "black")
+ 
+
+
+```
+
+### Rendimento Efetivo e Habitual 
 
 ```{r fig.height=6, fig.width=6}
+# Convertendo para formato longo
+massa_long <- massa_pe %>%
+  pivot_longer(cols = c(habitual, efetivo), names_to = "Tipo", values_to = "Massa") %>%
+  mutate(date = as.Date(date))  # Convertendo a coluna de data para Date
 
-seguro_bar_pe <- seguro_long %>% 
-  dplyr::mutate(
-    months = lubridate::month(date, label = TRUE) %>% forcats::as_factor(),
-    years = lubridate::year(date) %>% forcats::as_factor()
-    ) %>% 
-  dplyr::filter(
-    regiao == "PERNAMBUCO",
-    months <= lubridate::month(max(date), label = TRUE)
-    )
-
-seguro_bar_pe %>% 
-  ggplot2::ggplot(ggplot2::aes(x = years, y = value / 1e3, fill = months)) +
-  ggplot2::geom_bar(stat = "identity", position = ggplot2::position_stack(reverse = TRUE)) +
-  ggplot2::scale_x_discrete(breaks = levels(seguro_bar$years)) +
-  ggplot2::scale_y_continuous(expand = expansion(mult = c(0, 0.1))) +
-  ggplot2::scale_fill_manual(values = unname(colors)) +
-  ggplot2::geom_text(
-    ggplot2::aes(label = months), 
-    position = ggplot2::position_stack(vjust = .5, reverse = TRUE),
-    vjust    = 0.32,
-    size     = 4, 
-    fontface = "bold",
-    color    = "white"
-    ) +
-  ggplot2::coord_flip() +
-  ggplot2::theme(
-    legend.position  = "none",
-    plot.title       = ggplot2::element_text(size = 12, face = "bold"),
-    plot.subtitle    = ggplot2::element_text(size = 10, face = "italic"),
-    axis.text.x      = ggplot2::element_blank(),
-    axis.text.y      = ggplot2::element_text(face = "bold", size = 10), 
-    axis.ticks       = ggplot2::element_blank(),
-    panel.background = element_blank()
-    ) +
-  ggplot2::labs(
-    x        = NULL,
-    y        = NULL,
-    title    = "Pedidos de Seguro-Desemprego",
-    subtitle = "Em Milhares de requisições acumuladas no ano até o mês de corte",
-    caption  = foot_ibge
-    ) + 
-  ggplot2::geom_text(
-    ggplot2::aes(label = round(stat(y), 3), group = years), 
-    stat     = "summary", 
-    fun      = sum, 
-    vjust    = .4,
-    hjust    = -.2,
-    size     = 4.2,
-    fontface = "bold"
-  )
-
-
-
-
+# Plot
+ggplot(massa_long, aes(x = date, y = Massa, color = Tipo)) +
+  geom_line(size = 0.8) +
+  scale_color_manual(values = c("darkblue", "gray")) +
+  theme_pander()+
+  labs(x = "Data", y = "Massa de rendimento mensal real",
+       title = "Massa de rendimento mensal real em Pernambuco",
+       color = "Tipo") +
+  ggplot2::theme(legend.position = "top")
 ```
 
 :::
-
-
 :::
 :::
+:::
+
+
 
 
 
