--- a/mercado_de_trab/mercado_de_trabalho.qmd
+++ b/mercado_de_trab/mercado_de_trabalho.qmd
@@ -1,7 +1,7 @@
 ---
 title: "<img src ='logo2.png' height='40'> Análise do Mercado de Trabalho"
 author: 'Núcleo de Dados <br><span style = "font-size: 110%;">ADEPE<br><a href="https://github.com/dteconometrics">`r fontawesome::fa("github", fill = "#282f6b")`</a>&nbsp; <a href="https://www.linkedin.com/in/vinicius-limeira-565117180/">`r fontawesome::fa("linkedin", fill = "#282f6b")`</a>&nbsp; <a href="mailto:vinicius.valenca@adepe.pe.gov.br">`r fontawesome::fa("envelope", fill = "#282f6b")`</a>&nbsp; <a href="https://www.adepe.pe.gov.br/">`r fontawesome::fa("home", fill = "#282f6b")`</a></span>'
-date: "2023-12-12"
+date: "2024-04-09"
 lang: pt
 format: 
   html:
@@ -13,12 +13,9 @@ format:
 execute:
   echo: false
   warning: false
-  message: false   # não exibe avisos resultantes de códig
+  message: false   # não exibe avisos resultantes de código
   
 ---
-
-
-
 
 ```{r pacotes}
 
@@ -756,9 +753,6 @@ ggplot(massa_long, aes(x = date, y = Massa, color = Tipo)) +
 :::
 :::
 :::
-
-
-
 
 
 
