--- a/mercado_de_trab/mercado_de_trabalho.qmd
+++ b/mercado_de_trab/mercado_de_trabalho.qmd
@@ -448,8 +448,6 @@ seguro_long = seguro %>%
 
 :::
 
-
-
 :::{.g-col-5}
 ::: panel-tabset
 
@@ -528,6 +526,11 @@ filter(ocupacao_categoria_long,
 
 :::
 
+
+:::{.g-col-5}
+::: panel-tabset
+
+### Rendimento 
 ```{r fig.height=6, fig.width=6}
 
 colours_5 <- c("darkblue","gray", "#d62728", "#ff7f0e")
@@ -565,7 +568,45 @@ pnad_setor_long %>%
 
 ```
 
+### Ranking Desocupação
+
+|Ranking|	Estado | 	taxa (%)%)  |
+|:--------|:-------------------|-------:|
+|1°|  Santa Catarina	|3.2|
+|2°|	Rondônia	|3.3|
+|3°|	Mato Grosso|	|3.3 |
+|4°|	Mato Grosso do Sul	|3.8|
+|5°|	Tocantins	|4.3|
+|6°|	Paraná	|4.4|
+|7°|	Espírito Santo	|4.5|
+|8°|	Goiás	|5.2|
+|9°|	Minas Gerais	|5.3|
+|10°|	Rio Grande do Sul	|5.9|
+|11°|	São Paulo	|6.4|
+|12°|	Roraima	|7.1|
+|13°|	Acre	|7.2|
+|14°|	Maranhão	|7.3|
+|15°|	Pará	|7.4|
+|16°|	Ceará	|7.5|
+|17°|	Piauí	|7.6|
+|18°|	Amazonas	|7.9|
+|19°|	Alagoas	|8.1|
+|20°|	Paraíba	|8.6|
+|21°|	Amapá	|9.0|
+|22°|	Rio Grande do Norte	|9.1|
+|23°|	Sergipe	|9.1|
+|24°|	Rio de Janeiro	|9.6|
+|25°|	Distrito Federal	|9.7|
+|26°|	Bahia	|11.1|
+|27°|	Pernambuco	|11.5|
+
+
+
+
 :::
+:::
+:::
+
 
 :::
 
@@ -750,9 +791,12 @@ ggplot(massa_long, aes(x = date, y = Massa, color = Tipo)) +
 ```
 
 :::
+
+
 :::
 :::
 :::
+
 
 
 
